--- a/Client/package.json
+++ b/Client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-media": "^1.10.0",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1"
   },
